--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,6 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  /* background-image: linear-gradient(to bottom right, red, yellow); */
-  background-repeat: no-repeat;
-  background-position:center;
-  object-fit: contain;
-  background-size: contain;
+
   box-sizing: border-box;
   background:#191B46 ;
   color:white;
