--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.Appp {
+/* .Appp {
   background-image:radial-gradient(red, yellow, green)
 }
 
@@ -35,4 +35,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
