--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-/* .Appp {
-  background-image:radial-gradient(red, yellow, green)
+body {
+  /* background-image:radial-gradient(red, yellow, green) */
 }
 
 .App-logo {
@@ -35,4 +35,4 @@
   to {
     transform: rotate(360deg);
   }
-} */
+}
